Fixat Get och försökt med Post
Fixat get metoder för feelings och försökt fått tiill POST för Spelista
