# spotifeelAPI.py
@@ -5,6 +5,22 @@ import json
 import promptGPT
 from app import app
 
+emotions = {
+        "1": "Furious",
+        "2": "Frustrated",
+        "3": "Horrified",
+        "4": "Disappointed",
+        "5": "Euphoric",
+        "6": "Loving",
+        "7": "Happy",
+        "8": "Useless",
+        "9": "Regretful",
+        "10": "Dejected",
+        "11": "Unhappy",
+        "12": "Scared",
+        "13": "Anxious"
+    }
+
 '''Sets the file paths for the YAML and JSON file'''
 yaml_file_path = os.path.join(os.getcwd(), 'static', 'swagger.yaml')
 json_file_path = os.path.join(os.getcwd(), 'static', 'swagger.json')
@@ -22,25 +38,9 @@ with open(json_file_path, 'w') as json_file:
 def swagger_json():
     return jsonify(SWAGGER_SPEC)
 
-@app.route('/playlists/emotion/<int:emotionId>', methods=['GET'])
-def get_playlist(emotionId):
-        print(promptGPT.create_playlist(get_emotion_by_id(f"{emotionId}")))
-        
 '''Returns a given emotion based on its ID'''
 def getEmotionById(emotionId):
-    emotions = {
-        "1": "Furious",
-        "2": "Frustrated",
-        "3": "Horrified",
-        "4": "Disappointed",
-        "5": "Euphoric",
-        "6": "Loving",
-        "7": "Happy",
-        "8": "Useless",
-        "9": "Regretful",
-        "10": "Dejected",
-        "11": "Unhappy",
-        "12": "Scared",
-        "13": "Anxious"
-    }
     return emotions[emotionId]
+
+def getEmotions():
+    return emotions
